Bug 369643 - Transparency Mask not updating correctly on canvas
Summary: Transparency Mask not updating correctly on canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-02 16:32 UTC by Scott Petrovic
Modified: 2016-10-19 08:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Petrovic 2016-10-02 16:32:18 UTC
https://youtu.be/zExO3wKgPXk

While painting, the transparency mask results don't appear to be updating correct. It doesn't matter if OpenGL is on or off.

Reproducible: Always

Steps to Reproduce:
1. Start Krita
2. paint some strokes
3.add a transparency mask
4. try to mask out part of the image

Actual Results:  
artifacts and jaggies all around the edges of the result

Expected Results:  
it should look correct
Comment 1 wolthera 2016-10-02 16:33:30 UTC
Yeah, noticed this too.
Comment 2 Halla Rempt 2016-10-03 07:51:15 UTC
https://phabricator.kde.org/T3922
Comment 3 Dmitry Kazakov 2016-10-19 06:41:52 UTC
Looks like something very recent...
Comment 4 Dmitry Kazakov 2016-10-19 08:45:39 UTC
Git commit 9cf0a76bfb77ec014f0a29688b00475de6934b1f by Dmitry Kazakov.
Committed on 19/10/2016 at 08:45.
Pushed by dkazakov into branch 'master'.

Fix Wash Mode painting on masks

We told Krita that the masks support indirect painting but
we never implemented the indirect painting itself! :(

Fixes T3922

M  +38   -18   libs/image/kis_indirect_painting_support.h
M  +34   -3    libs/image/kis_mask.cc
M  +1    -2    libs/image/kis_paint_layer.cc
M  +1    -3    libs/image/kis_selection_based_layer.cpp
M  +6    -12   libs/image/lazybrush/kis_colorize_mask.cpp

http://commits.kde.org/krita/9cf0a76bfb77ec014f0a29688b00475de6934b1f