Fix Wash Mode painting on masks

We told Krita that the masks support indirect painting but
we never implemented the indirect painting itself! :(

Fixes T3922
BUG:369643